--- a/client/main.css
+++ b/client/main.css
@@ -63,3 +63,17 @@ button {
   margin: 0;
   padding: 1em;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #161616;
+    color: #DDD;
+  }
+  [type=text] {
+    background-color: #0c0c0c;
+    color: inherit;
+  }
+  .message {
+    background-color: #060606;
+  }
+}
