--- a/client/main.css
+++ b/client/main.css
@@ -8,6 +8,7 @@ body {
   line-height: 1.4;
   margin-inline: auto;
   max-inline-size: 50rem;
+  padding-block: 1em 6em;
   padding-inline: 1em;
 }
 
