--- a/client/main.css
+++ b/client/main.css
@@ -5,19 +5,25 @@
 body {
   accent-color: #32b5c9;
   background-color: whitesmoke;
+  display: flex;
+  flex-direction: column-reverse;
   font-family: system-ui, sans-serif;
-  line-height: 1.4;
+  gap: 1em;
+  line-height: 1.5;
+  margin-block: 0;
   margin-inline: auto;
   max-inline-size: 50rem;
-  padding-block: 1em 6em;
+  block-size: 100vh;
+  padding-block: 0;
   padding-inline: 1em;
 }
 
 form {
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-  margin-block: 3em;
+  flex-direction: row;
+  gap: 1em;
+  margin-block: 1em;
 }
 
 input, button {
@@ -31,16 +37,18 @@ label {
 
 [type=text] {
   border: none;
+  border-radius: 1em;
   box-shadow: inset 0 1px 4px rgba(0,0,0,0.15);
-  font-size: larger;
+  flex: 1;
+  font-size: inherit;
   padding: 1em;
 }
 
 button {
-  align-self: flex-start;
+  align-self: stretch;
   background-color: #008196;
   border: none;
-  border-radius: 0.25em;
+  border-radius: 1em;
   box-shadow:
     inset 0 -2px 0 rgba(0,0,0,0.2),
     0 1px 4px rgba(0,0,0,0.05);
@@ -50,16 +58,19 @@ button {
 }
 
 .messages {
+  align-items: flex-start;
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  flex-direction: column-reverse;
   gap: 1em;
   list-style: none;
   margin: 0;
+  overflow-y: scroll;
   padding: 0;
 }
 .message {
   background-color: white;
-  border-radius: 0.25em;
+  border-radius: 1em;
   box-shadow: 0 1px 4px rgba(0,0,0,0.05);
   list-style: none;
   margin: 0;
@@ -68,14 +79,14 @@ button {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #161616;
+    background-color: #0c0c0c;
     color: #DDD;
   }
   [type=text] {
-    background-color: #0c0c0c;
+    background-color: #131313;
     color: inherit;
   }
   .message {
-    background-color: #060606;
+    background-color: #131313;
   }
 }
