--- a/client/main.css
+++ b/client/main.css
@@ -70,7 +70,7 @@ button {
 }
 .message {
   background-color: white;
-  border-radius: 1em;
+  border-radius: 1em 1em 1em 0;
   box-shadow: 0 1px 4px rgba(0,0,0,0.05);
   list-style: none;
   margin: 0;
